# scorched3d

./: README.md
scorched/: AUTHORS  COMPILING  Makefile.am  Makefile.in  Microsoft.VC80.CRT.manifest  README  Scorched3D.spec  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure-al.m4  configure-fftw.m4  configure-gl.m4  configure-ode.m4  configure-ogg.m4  configure-sdl.m4  configure-sql.m4  configure.ac  scorched-patch.nsi  scorched.nsi  scorched.sln
scorched/borland/: Makefile  borland.txt  createMakefile.pl  make.cmd  zmouse.h
scorched/data/: accessories.xml  ainames.txt  autoexec.xml  custominfo.xml  display.xml  fastestdisplay.xml  keys.xml  landscape.xml  landscapes.xml  landscapesdefn.xml  landscapesplace.xml  landscapessound.xml  landscapestex.xml  mediumdisplay.xml  modinfo.xml  motd.txt  music.xml  mysql.xml  pgprunetables.sql  pgsql.xml  pgstatstables.sql  prunetables.sql  resource.xml  safedisplay.xml  server.xml  singlecustom.xml  singleeasy.xml  singlegames.xml  singlehard.xml  singlenormal.xml  singletarget.xml  singletutorial.xml  ssdisplay.xml  ssgame.xml  statstables.sql  tankais.xml  tankaiweaponsets.xml  tanks.xml  tanktypes.xml  textureset.xml  (+4 more)
scorched/data/accessories/: clusterbomb.ase  clusterbomb2.ase  default.ase  roller.ase
scorched/data/avatars/: agreement.txt
scorched/data/globalmods/: globalmods.txt
scorched/data/landscapes/: ambientsoundjet.xml  ambientsoundjungle.xml  ambientsoundlava.xml  ambientsoundnight.xml  ambientsoundrain.xml  ambientsoundtrees.xml  ambientsoundwaves.xml  boidsah64.xml  boidsbats.xml  boidsf16.xml  boidsf18.xml  boidsgulls.xml  boidsparrot.xml  boidst38.xml  defnascencion.xml  defncanyon.xml  defncavern.xml  defndenali.xml  defnglaciation.xml  defnhalfed.xml  defnhilly.xml  defnicebergs1.xml  defnicebergs2.xml  defnicebergs3.xml  defnislands.xml  defnlowlands.xml  defnoldstyle.xml  defnridge.xml  defnspike.xml  defntest.xml  defnvalley.xml  eventslightning.xml  eventsmeteor.xml  placeburntpine.xml  placedenali.xml  placenone.xml  placeoak.xml  placeoak2.xml  placepalm.xml  placepalm2.xml  (+29 more)
scorched/data/meshes/: autoaim.ase  bird.txt  bounce.ase  concrete.ase  missile.ase  rock1.ase  rock2.ase  survivalraft.txt  wind.ase  wrap.ase
scorched/data/shaders/: land.fshader  land.vshader  water.fshader  water.license  water.vshader
scorched/data/talk/: talk1.txt  talk2.txt
scorched/data/tanks/: a7v.ase  aat.ase  apache-long.ase  apache.ase  atst.ase  bm13.ase  bradley.ase  flakpanzerwirbelwind.ase  guntower.txt  harpoon.ase  hawk.ase  hind.ase  hothgun.ase  hothgun2.ase  howitzer.ase  hummermlrs.ase  hummersam.ase  hummertow.ase  kenny2.txt  m110.ase  m198.ase  m1a1.ase  m7priest.ase  mark1.ase  paladin.ase  panzer3.ase  patriot.ase  phalanx.ase  question.ase  railgun.ase  ram.ase  rapier.ase  sa-19.ase  sa6.ase  scud.ase  seasparrow.ase  shark.txt  siegetank.ase  siegetank2.ase  t55.ase  (+11 more)
scorched/data/windows/: Thumbs.db
scorched/documentation/: README-apoc.txt  README-ogg.txt  README-png.txt  README-zlib.txt  Scorched3D.hlp  liesmich.txt  mehrspieler.txt  multiplayer.txt  readme.txt
scorched/documentation/html/: accessories.html  aiming.html  camera.html  dummies.html  index.html  keys.html  modelling.html  online.html  options.html  players.html  ports.html  quickstart.html  screen.html  serverfiles.html
scorched/generic/: Makefile  createMakefile.pl  generic.txt  solaris
scorched/logs/: Log_Dir
scorched/osx/: wxgtk.info
scorched/scripts/: addGPLLines.pl  checkIncludeCase.pl  checkMakeRefs.pl  convertAccessories38-381.pl  copyall.bat  copyallnodata.bat  copyjustsrc.bat  createAMMakefile.pl  createDmg  dos2unixall  exclude.txt  exclude2.txt  framewk.sh  generateDiff.pl  hmm.txt  make_todo.pl  moveGroups.pl  ms3d_ascii_export-1.2.py  ms3d_ascii_export.py  openal-config  removeMSPragma.pl  removeSlash.pl  resource.h  resource.rc  showChangedOptions.pl  splitlandscapefile.pl  updateAmbientSounds.pl  vcfiles.pl  weaponDocs.pl  wxWinFromRC.pl
scorched/setup/: Setup.vdproj
scorched/src/: Makefile.am  Makefile.in
scorched/src/3dsparse/: ASEArrayFact.cpp  ASEArrayFact.h  ASEFile.cpp  ASEFile.h  ASEModel.cpp  ASEModel.h  ASEModelFactory.cpp  ASEModelFactory.h  ASEStore.cpp  ASEStore.h  Bone.cpp  Bone.h  Face.cpp  Face.h  ImageID.cpp  ImageID.h  ImageStore.cpp  ImageStore.h  MSFile.cpp  MSFile.h  MSModelFactory.cpp  MSModelFactory.h  Mesh.cpp  Mesh.h  MeshLOD.cpp  MeshLOD.h  MeshLODTri.cpp  MeshLODTri.h  MeshLODVector.cpp  MeshLODVector.h  Model.cpp  Model.h  ModelArrayFact.cpp  ModelArrayFact.h  ModelDefn.cpp  ModelDefn.h  ModelID.cpp  ModelID.h  ModelMaths.cpp  ModelMaths.h  (+13 more)
scorched/src/GLEXT/: GLBilboardRenderer.cpp  GLBilboardRenderer.h  GLBitmap.cpp  GLBitmap.h  GLBitmapItterator.cpp  GLBitmapItterator.h  GLBitmapModifier.cpp  GLBitmapModifier.h  GLCamera.cpp  GLCamera.h  GLCameraFrustum.cpp  GLCameraFrustum.h  GLConsole.cpp  GLConsole.h  GLConsoleFileReader.cpp  GLConsoleFileReader.h  GLConsoleLines.cpp  GLConsoleLines.h  GLConsoleMethods.cpp  GLConsoleMethods.h  GLConsoleRule.cpp  GLConsoleRule.h  GLConsoleRuleFn.cpp  GLConsoleRuleFn.h  GLConsoleRuleFnIAdapter.cpp  GLConsoleRuleFnIAdapter.h  GLConsoleRuleMethod.cpp  GLConsoleRuleMethod.h  GLConsoleRuleMethodIAdapter.cpp  GLConsoleRuleMethodIAdapter.h  GLConsoleRules.cpp  GLConsoleRules.h  GLDynamicVertexArray.cpp  GLDynamicVertexArray.h  GLFont2d.cpp  GLFont2d.h  GLFontBanner.cpp  GLFontBanner.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  (+63 more)
scorched/src/GLSL/: GLSLProgram.cpp  GLSLProgram.h  GLSLShader.cpp  GLSLShader.h  GLSLShaderSetup.cpp  GLSLShaderSetup.h
scorched/src/GLW/: GLWBitmap.cpp  GLWBitmap.h  GLWButton.cpp  GLWButton.h  GLWChannelText.cpp  GLWChannelText.h  GLWChannelView.cpp  GLWChannelView.h  GLWChannelViewTextRenderer.cpp  GLWChannelViewTextRenderer.h  GLWCheckBox.cpp  GLWCheckBox.h  GLWCheckBoxText.cpp  GLWCheckBoxText.h  GLWColors.cpp  GLWColors.h  GLWDragger.cpp  GLWDragger.h  GLWDropDown.cpp  GLWDropDown.h  GLWDropDownColor.cpp  GLWDropDownColor.h  GLWDropDownText.cpp  GLWDropDownText.h  GLWFileView.cpp  (+101 more)
(+2188 files in other folders)
