SUBDIRS = src

docdir = @docdir@

scorcheddocumentationdir = ${docdir}/documentation
scorcheddocumentation_DATA = documentation/README-EXPAT.txt \
	documentation/README-ODE.txt \
	documentation/README-SDL.txt \
	documentation/README-SDLMIXER.txt \
	documentation/README-SDLNET.txt \
	documentation/README-wxwindows.txt \
	documentation/README-zlib.txt \
	documentation/Scorched3D.hlp \
	documentation/liesmich.txt \
	documentation/multiplayer.txt \
	documentation/readme.txt
scorcheddatadir = ${datadir}/data
scorcheddata_DATA = data/accessories.xml \
	data/ainames.txt \
	data/autoexec.xml \
	data/keys.xml \
	data/landscapes.xml \
	data/motd.txt \
	data/mysql.xml \
	data/playernames.txt \
	data/prunetables.sql \
	data/random.no \
	data/resource.xml \
	data/server.xml \
	data/singlecustom.xml \
	data/singleeasy.xml \
	data/singlehard.xml \
	data/singlenormal.xml \
	data/statstables.sql \
	data/tankais.xml \
	data/tanks.xml \
	data/safedisplay.xml \
	data/windows.xml
scorcheddataaccessoriesdir = ${datadir}/data/accessories
scorcheddataaccessories_DATA = data/accessories/clusterbomb.ase \
	data/accessories/clusterbomb2.ase \
	data/accessories/default.ase \
	data/accessories/default.bmp \
	data/accessories/flare.txt \
	data/accessories/white.bmp \
	data/accessories/roller.ase
scorcheddataaccessoriesbarragedir = ${datadir}/data/accessories/barrage
scorcheddataaccessoriesbarrage_DATA = data/accessories/barrage/barrage.txt \
	data/accessories/barrage/gradient.bmp \
	data/accessories/barrage/white.bmp \
	data/accessories/barrage/yellow.bmp
scorcheddataaccessoriesbombdir = ${datadir}/data/accessories/bomb
scorcheddataaccessoriesbomb_DATA = data/accessories/bomb/black.bmp \
	data/accessories/bomb/bomb.txt \
	data/accessories/bomb/white.bmp
scorcheddataaccessoriesbombletdir = ${datadir}/data/accessories/bomblet
scorcheddataaccessoriesbomblet_DATA = data/accessories/bomblet/bomblet.txt \
	data/accessories/bomblet/yellow.bmp
scorcheddataaccessoriesbouncingbettydir = ${datadir}/data/accessories/bouncingbetty
scorcheddataaccessoriesbouncingbetty_DATA = data/accessories/bouncingbetty/black.bmp \
	data/accessories/bouncingbetty/bouncingbetty.txt
scorcheddataaccessoriesdiggerdir = ${datadir}/data/accessories/digger
scorcheddataaccessoriesdigger_DATA = data/accessories/digger/black.bmp \
	data/accessories/digger/digger.txt \
	data/accessories/digger/swirl.bmp
scorcheddataaccessoriesfatmandir = ${datadir}/data/accessories/fatman
scorcheddataaccessoriesfatman_DATA = data/accessories/fatman/black.bmp \
	data/accessories/fatman/fatman.txt
scorcheddataaccessorieshawkmissiledir = ${datadir}/data/accessories/hawkmissile
scorcheddataaccessorieshawkmissile_DATA = data/accessories/hawkmissile/gradient.bmp \
	data/accessories/hawkmissile/hawk.txt \
	data/accessories/hawkmissile/white.bmp \
	data/accessories/hawkmissile/yellow.bmp
scorcheddataaccessoriesicbmdir = ${datadir}/data/accessories/icbm
scorcheddataaccessoriesicbm_DATA = data/accessories/icbm/black.bmp \
	data/accessories/icbm/gradient.bmp \
	data/accessories/icbm/icbm.txt \
	data/accessories/icbm/white.bmp \
	data/accessories/icbm/yellow.bmp
scorcheddataaccessorieslittleboydir = ${datadir}/data/accessories/littleboy
scorcheddataaccessorieslittleboy_DATA = data/accessories/littleboy/black.bmp \
	data/accessories/littleboy/littleboy.txt
scorcheddataaccessoriesm48dir = ${datadir}/data/accessories/m48
scorcheddataaccessoriesm48_DATA = data/accessories/m48/gradient.bmp \
	data/accessories/m48/m48.txt \
	data/accessories/m48/white.bmp \
	data/accessories/m48/yellow.bmp
scorcheddataaccessoriesmirvwarheaddir = ${datadir}/data/accessories/mirvwarhead
scorcheddataaccessoriesmirvwarhead_DATA = data/accessories/mirvwarhead/black.bmp \
	data/accessories/mirvwarhead/mirvwarhead.txt
scorcheddataaccessoriespalmtreedir = ${datadir}/data/accessories/palmtree
scorcheddataaccessoriespalmtree_DATA = data/accessories/palmtree/black.bmp \
	data/accessories/palmtree/burntpalm.txt \
	data/accessories/palmtree/burntpalm2.txt \
	data/accessories/palmtree/green.bmp \
	data/accessories/palmtree/palm.txt \
	data/accessories/palmtree/palm2.txt \
	data/accessories/palmtree/tan.bmp
scorcheddataaccessoriespatriotdir = ${datadir}/data/accessories/patriot
scorcheddataaccessoriespatriot_DATA = data/accessories/patriot/gradient.bmp \
	data/accessories/patriot/patriot.txt \
	data/accessories/patriot/white.bmp \
	data/accessories/patriot/yellow.bmp
scorcheddataaccessoriessa6dir = ${datadir}/data/accessories/sa6
scorcheddataaccessoriessa6_DATA = data/accessories/sa6/gradient.bmp \
	data/accessories/sa6/sa6.txt \
	data/accessories/sa6/white.bmp \
	data/accessories/sa6/yellow.bmp
scorcheddataaccessoriesshelldir = ${datadir}/data/accessories/shell
scorcheddataaccessoriesshell_DATA = data/accessories/shell/black.bmp \
	data/accessories/shell/shell.txt
scorcheddataaccessoriessmallpinedir = ${datadir}/data/accessories/smallpine
scorcheddataaccessoriessmallpine_DATA = data/accessories/smallpine/black.bmp \
	data/accessories/smallpine/burntsmallpine.txt \
	data/accessories/smallpine/green.bmp \
	data/accessories/smallpine/smallpine.txt \
	data/accessories/smallpine/smallpine2.txt \
	data/accessories/smallpine/smallpine3.txt \
	data/accessories/smallpine/tan.bmp \
	data/accessories/smallpine/wintergreen.bmp \
	data/accessories/smallpine/wintersmallpine.txt \
	data/accessories/smallpine/wintersmallpine2.txt \
	data/accessories/smallpine/wintersmallpine3.txt
scorcheddataaccessoriesv2missiledir = ${datadir}/data/accessories/v2missile
scorcheddataaccessoriesv2missile_DATA = data/accessories/v2missile/black.bmp \
	data/accessories/v2missile/checker.bmp \
	data/accessories/v2missile/gradient.bmp \
	data/accessories/v2missile/v2missile.txt \
	data/accessories/v2missile/yellow.bmp
scorcheddataacessoriesdir = ${datadir}/data/acessories
scorcheddataacessories_DATA = 
scorcheddatafontsdir = ${datadir}/data/fonts
scorcheddatafonts_DATA = data/fonts/test.ttf
scorcheddatalandscapesdir = ${datadir}/data/landscapes
scorcheddatalandscapes_DATA = data/landscapes/half-mask.bmp \
	data/landscapes/halved.bmp \
	data/landscapes/hilly.bmp \
	data/landscapes/hmap3.bmp \
	data/landscapes/hole-mask.bmp \
	data/landscapes/hole.bmp \
	data/landscapes/islands.bmp \
	data/landscapes/lowlands.bmp \
	data/landscapes/oldstyle.bmp \
	data/landscapes/picture-none.bmp \
	data/landscapes/ridge-mask.bmp \
	data/landscapes/ridge.bmp \
	data/landscapes/valley-mask.bmp \
	data/landscapes/valley.bmp
scorcheddatameshesdir = ${datadir}/data/meshes
scorcheddatameshes_DATA = data/meshes/autoaim.ase \
	data/meshes/rock1.ase \
	data/meshes/rock2.ase \
	data/meshes/survivalraft.txt \
	data/meshes/wind.ase \
	data/meshes/bounce.ase \
	data/meshes/concrete.ase \
	data/meshes/wrap.ase
scorcheddatatalkdir = ${datadir}/data/talk
scorcheddatatalk_DATA = data/talk/talk1.txt \
	data/talk/talk2.txt
scorcheddatatalkgermandir = ${datadir}/data/talk/german
scorcheddatatalkgerman_DATA = data/talk/german/talk1.txt \
	data/talk/german/talk2.txt
scorcheddatatalkpolishdir = ${datadir}/data/talk/polish
scorcheddatatalkpolish_DATA = data/talk/polish/talk1.txt \
	data/talk/polish/talk2.txt
scorcheddatatanksdir = ${datadir}/data/tanks
scorcheddatatanks_DATA = data/tanks/apache.ase \
	data/tanks/a7v.ase \
	data/tanks/a7v.bmp \
	data/tanks/aat.ase \
	data/tanks/aat.bmp \
	data/tanks/apache-long.ase \
	data/tanks/apache-long.bmp \
	data/tanks/apache.bmp \
	data/tanks/atst.ase \
	data/tanks/atst.bmp \
	data/tanks/bm13.ase \
	data/tanks/bm13.bmp \
	data/tanks/bradley.ase \
	data/tanks/bradley.bmp \
	data/tanks/bradleyb.bmp \
	data/tanks/flakpanzerwirbelwind.ase \
	data/tanks/flakpanzerwirbelwind.bmp \
	data/tanks/harpoon.ase \
	data/tanks/harpoon.bmp \
	data/tanks/hawk.ase \
	data/tanks/hawk.bmp \
	data/tanks/hind.ase \
	data/tanks/hind.bmp \
	data/tanks/hothgun.ase \
	data/tanks/hothgun.bmp \
	data/tanks/hothgun2.ase \
	data/tanks/hothgun2.bmp \
	data/tanks/howitzer.ase \
	data/tanks/howitzer.bmp \
	data/tanks/hummermlrs.ase \
	data/tanks/hummermlrs.bmp \
	data/tanks/hummersam.ase \
	data/tanks/hummersam.bmp \
	data/tanks/hummertow.ase \
	data/tanks/hummertow.bmp \
	data/tanks/kenny02.bmp \
	data/tanks/kenny2.txt \
	data/tanks/m110.ase \
	data/tanks/m110.bmp \
	data/tanks/m198.ase \
	data/tanks/m198.bmp \
	data/tanks/m1a1.ase \
	data/tanks/m1a1.bmp \
	data/tanks/m7priest.ase \
	data/tanks/m7priest.bmp \
	data/tanks/mark1.ase \
	data/tanks/mark1.bmp \
	data/tanks/paladin.ase \
	data/tanks/paladin.bmp \
	data/tanks/panzer3.ase \
	data/tanks/panzer3.bmp \
	data/tanks/patriot.ase \
	data/tanks/patriot.bmp \
	data/tanks/phalanx.ase \
	data/tanks/phalanx.bmp \
	data/tanks/question.ase \
	data/tanks/question.bmp \
	data/tanks/railgun.ase \
	data/tanks/railgun.bmp \
	data/tanks/ram.ase \
	data/tanks/ram.bmp \
	data/tanks/rapier.ase \
	data/tanks/rapier.bmp \
	data/tanks/sa-19.ase \
	data/tanks/sa-19.bmp \
	data/tanks/sa6.ase \
	data/tanks/sa6.bmp \
	data/tanks/scud.ase \
	data/tanks/scud.bmp \
	data/tanks/seasparrow.ase \
	data/tanks/seasparrow.bmp \
	data/tanks/siegetank.ase \
	data/tanks/siegetank.bmp \
	data/tanks/siegetank2.ase \
	data/tanks/siegetank2.bmp \
	data/tanks/t55.ase \
	data/tanks/t55.bmp \
	data/tanks/t55b.bmp \
	data/tanks/t74.ase \
	data/tanks/t74.bmp \
	data/tanks/t74b.bmp \
	data/tanks/tank2.ase \
	data/tanks/tank2.bmp \
	data/tanks/tank3.ase \
	data/tanks/tank3.bmp \
	data/tanks/tank4.ase \
	data/tanks/tank4.bmp \
	data/tanks/tank5.ase \
	data/tanks/tank5.bmp \
	data/tanks/tank5a.bmp \
	data/tanks/tank6.ase \
	data/tanks/tank6.bmp \
	data/tanks/tank6a.bmp \
	data/tanks/tank6b.bmp \
	data/tanks/tos1.ase \
	data/tanks/tos1.bmp \
	data/tanks/towedartillery.ase \
	data/tanks/towedartillery.bmp \
	data/tanks/towedartilleryb.bmp \
	data/tanks/v2.ase \
	data/tanks/v2.bmp \
	data/tanks/wespe.ase \
	data/tanks/wespe.bmp \
	data/tanks/zsu-24-1.ase \
	data/tanks/zsu-24-1.bmp
scorcheddatatanksbattleshipdir = ${datadir}/data/tanks/battleship
scorcheddatatanksbattleship_DATA = data/tanks/battleship/battleship.txt \
	data/tanks/battleship/grey.bmp
scorcheddatatanksbm13dir = ${datadir}/data/tanks/bm13
scorcheddatatanksbm13_DATA = data/tanks/bm13/bigtire.bmp \
	data/tanks/bm13/bm13-2.txt \
	data/tanks/bm13/cab.bmp \
	data/tanks/bm13/dot.bmp \
	data/tanks/bm13/tan.bmp \
	data/tanks/bm13/white.bmp
scorcheddatatanksbradley2dir = ${datadir}/data/tanks/bradley2
scorcheddatatanksbradley2_DATA = data/tanks/bradley2/bradley.bmp \
	data/tanks/bradley2/bradley2.txt
scorcheddatatanksdeathdir = ${datadir}/data/tanks/death
scorcheddatatanksdeath_DATA = data/tanks/death/black.bmp \
	data/tanks/death/chrome.bmp \
	data/tanks/death/death.txt \
	data/tanks/death/tan.bmp \
	data/tanks/death/white.bmp
scorcheddatatanksguntowerdir = ${datadir}/data/tanks/guntower
scorcheddatatanksguntower_DATA = data/tanks/guntower/guntower.bmp \
	data/tanks/guntower/guntower.txt \
	data/tanks/guntower/guntower2.bmp
scorcheddatatankshawkdir = ${datadir}/data/tanks/hawk
scorcheddatatankshawk_DATA = data/tanks/hawk/bigtire.bmp \
	data/tanks/hawk/chrome.bmp \
	data/tanks/hawk/hawk.txt \
	data/tanks/hawk/tan.bmp \
	data/tanks/hawk/white.bmp
scorcheddatatankshelderdir = ${datadir}/data/tanks/helder
scorcheddatatankshelder_DATA = data/tanks/helder/helder.txt \
	data/tanks/helder/helder2.txt \
	data/tanks/helder/redspace.bmp \
	data/tanks/helder/whitespace.bmp
scorcheddatatankslav25dir = ${datadir}/data/tanks/lav-25
scorcheddatatankslav25_DATA = data/tanks/lav-25/bigtire.bmp \
	data/tanks/lav-25/camo.bmp \
	data/tanks/lav-25/lav-25.txt
scorcheddatatanksm1a1dir = ${datadir}/data/tanks/m1a1
scorcheddatatanksm1a1_DATA = data/tanks/m1a1/black.bmp \
	data/tanks/m1a1/camo.bmp \
	data/tanks/m1a1/m1a1.txt \
	data/tanks/m1a1/tread.bmp
scorcheddatatanksm48dir = ${datadir}/data/tanks/m48
scorcheddatatanksm48_DATA = data/tanks/m48/camo.bmp \
	data/tanks/m48/chrome.bmp \
	data/tanks/m48/m48.txt \
	data/tanks/m48/tread.bmp \
	data/tanks/m48/white.bmp
scorcheddatatanksmlrsdir = ${datadir}/data/tanks/mlrs
scorcheddatatanksmlrs_DATA = data/tanks/mlrs/camo.bmp \
	data/tanks/mlrs/chrome.bmp \
	data/tanks/mlrs/mlrs.txt \
	data/tanks/mlrs/tread.bmp
scorcheddatatankspatriotdir = ${datadir}/data/tanks/patriot
scorcheddatatankspatriot_DATA = data/tanks/patriot/bigtire.bmp \
	data/tanks/patriot/camo.bmp \
	data/tanks/patriot/chrome.bmp \
	data/tanks/patriot/kaki.bmp \
	data/tanks/patriot/patriot.txt
scorcheddatatanksphotoncannondir = ${datadir}/data/tanks/photoncannon
scorcheddatatanksphotoncannon_DATA = data/tanks/photoncannon/basetexture.bmp \
	data/tanks/photoncannon/blue.bmp \
	data/tanks/photoncannon/gradient.bmp \
	data/tanks/photoncannon/photoncannon.txt \
	data/tanks/photoncannon/yellow.bmp
scorcheddatatankssa6dir = ${datadir}/data/tanks/sa6
scorcheddatatankssa6_DATA = data/tanks/sa6/black.bmp \
	data/tanks/sa6/chrome.bmp \
	data/tanks/sa6/guncover.bmp \
	data/tanks/sa6/guncoveralpha.bmp \
	data/tanks/sa6/sa6.txt \
	data/tanks/sa6/white.bmp \
	data/tanks/sa6/zsu23.bmp
scorcheddatatankst90dir = ${datadir}/data/tanks/t90
scorcheddatatankst90_DATA = data/tanks/t90/black.bmp \
	data/tanks/t90/t90.bmp \
	data/tanks/t90/t90.txt
scorcheddatatankstheldir = ${datadir}/data/tanks/thel
scorcheddatatanksthel_DATA = data/tanks/thel/black.bmp \
	data/tanks/thel/chrome.bmp \
	data/tanks/thel/green.bmp \
	data/tanks/thel/kaki.bmp \
	data/tanks/thel/thel.txt
scorcheddatatankstowedartillery2dir = ${datadir}/data/tanks/towedartillery2
scorcheddatatankstowedartillery2_DATA = data/tanks/towedartillery2/bigtire.bmp \
	data/tanks/towedartillery2/chrome.bmp \
	data/tanks/towedartillery2/tan.bmp \
	data/tanks/towedartillery2/towedartillery2.txt
scorcheddatatankszsu23dir = ${datadir}/data/tanks/zsu23
scorcheddatatankszsu23_DATA = data/tanks/zsu23/black.bmp \
	data/tanks/zsu23/white.bmp \
	data/tanks/zsu23/zsu23.bmp \
	data/tanks/zsu23/zsu23.txt
scorcheddatatankszsu57dir = ${datadir}/data/tanks/zsu57
scorcheddatatankszsu57_DATA = data/tanks/zsu57/black.bmp \
	data/tanks/zsu57/zsu57.bmp \
	data/tanks/zsu57/zsu57.txt
scorcheddatatexturesdir = ${datadir}/data/textures
scorcheddatatextures_DATA = data/textures/glow1.bmp \
	data/textures/pine.bmp \
	data/textures/pinea.bmp \
	data/textures/smoke01.bmp \
	data/textures/smoke02.bmp \
	data/textures/talk.bmp \
	data/textures/waves.bmp \
	data/textures/waves2.bmp
scorcheddatatexturesbordershielddir = ${datadir}/data/textures/bordershield
scorcheddatatexturesbordershield_DATA = data/textures/bordershield/grid.bmp \
	data/textures/bordershield/grid2.bmp \
	data/textures/bordershield/grid22.bmp \
	data/textures/bordershield/hit.bmp
scorcheddatatexturesexplodedir = ${datadir}/data/textures/explode
scorcheddatatexturesexplode_DATA = data/textures/explode/exp00_1.bmp \
	data/textures/explode/exp00_10.bmp \
	data/textures/explode/exp00_2.bmp \
	data/textures/explode/exp00_3.bmp \
	data/textures/explode/exp00_4.bmp \
	data/textures/explode/exp00_5.bmp \
	data/textures/explode/exp00_6.bmp \
	data/textures/explode/exp00_7.bmp \
	data/textures/explode/exp00_8.bmp \
	data/textures/explode/exp00_9.bmp \
	data/textures/explode/exp01_1.bmp \
	data/textures/explode/exp01_2.bmp \
	data/textures/explode/exp01_3.bmp \
	data/textures/explode/exp02_1.bmp \
	data/textures/explode/exp02_2.bmp \
	data/textures/explode/exp02_3.bmp \
	data/textures/explode/exp03_1.bmp \
	data/textures/explode/exp03_2.bmp \
	data/textures/explode/exp03_3.bmp \
	data/textures/explode/exp04_1.bmp \
	data/textures/explode/exp04_2.bmp \
	data/textures/explode/exp04_3.bmp \
	data/textures/explode/exp05_1.bmp \
	data/textures/explode/exp05_2.bmp \
	data/textures/explode/exp05_3.bmp \
	data/textures/explode/exp05_4.bmp \
	data/textures/explode/exp05_5.bmp \
	data/textures/explode/exp05_6.bmp \
	data/textures/explode/exp05_7.bmp
scorcheddatatexturesflamedir = ${datadir}/data/textures/flame
scorcheddatatexturesflame_DATA = data/textures/flame/flame01.bmp \
	data/textures/flame/flame02.bmp \
	data/textures/flame/flame03.bmp \
	data/textures/flame/flame04.bmp \
	data/textures/flame/flame05.bmp \
	data/textures/flame/flame06.bmp \
	data/textures/flame/flame07.bmp \
	data/textures/flame/flame08.bmp \
	data/textures/flame/flame09.bmp \
	data/textures/flame/flame10.bmp \
	data/textures/flame/flame11.bmp \
	data/textures/flame/flame12.bmp \
	data/textures/flame/flame13.bmp \
	data/textures/flame/flame14.bmp \
	data/textures/flame/flame15.bmp \
	data/textures/flame/flame16.bmp \
	data/textures/flame/flame17.bmp \
	data/textures/flame/flame18.bmp \
	data/textures/flame/flame19.bmp \
	data/textures/flame/flame20.bmp \
	data/textures/flame/flame21.bmp \
	data/textures/flame/flame22.bmp \
	data/textures/flame/flame23.bmp \
	data/textures/flame/flame24.bmp \
	data/textures/flame/flame25.bmp \
	data/textures/flame/flame26.bmp \
	data/textures/flame/flame27.bmp \
	data/textures/flame/flame28.bmp \
	data/textures/flame/flame29.bmp \
	data/textures/flame/flame30.bmp \
	data/textures/flame/flame31.bmp \
	data/textures/flame/flame32.bmp \
	data/textures/flame/flame33.bmp
scorcheddatatextureslandscapedir = ${datadir}/data/textures/landscape
scorcheddatatextureslandscape_DATA = data/textures/landscape/textures.txt
scorcheddatatextureslandscapedefaultdir = ${datadir}/data/textures/landscape/default
scorcheddatatextureslandscapedefault_DATA = data/textures/landscape/default/cloud1.bmp \
	data/textures/landscape/default/cubemap.bmp \
	data/textures/landscape/default/detail.bmp \
	data/textures/landscape/default/magma-small.bmp \
	data/textures/landscape/default/rockside.bmp \
	data/textures/landscape/default/scorch.bmp \
	data/textures/landscape/default/shore.bmp \
	data/textures/landscape/default/texture0.bmp \
	data/textures/landscape/default/texture1.bmp \
	data/textures/landscape/default/texture2.bmp \
	data/textures/landscape/default/texture3.bmp \
	data/textures/landscape/default/texture4.bmp \
	data/textures/landscape/default/water.bmp
scorcheddatatextureslandscapehelldir = ${datadir}/data/textures/landscape/hell
scorcheddatatextureslandscapehell_DATA = data/textures/landscape/hell/cloud1.bmp \
	data/textures/landscape/hell/cubemap.bmp \
	data/textures/landscape/hell/rockside.bmp \
	data/textures/landscape/hell/scorch.bmp \
	data/textures/landscape/hell/shore.bmp \
	data/textures/landscape/hell/texture0.bmp \
	data/textures/landscape/hell/texture1.bmp \
	data/textures/landscape/hell/texture2.bmp \
	data/textures/landscape/hell/texture3.bmp \
	data/textures/landscape/hell/texture4.bmp
scorcheddatatextureslandscapesanddir = ${datadir}/data/textures/landscape/sand
scorcheddatatextureslandscapesand_DATA = data/textures/landscape/sand/cloud1.bmp \
	data/textures/landscape/sand/cubemap.bmp \
	data/textures/landscape/sand/rockside.bmp \
	data/textures/landscape/sand/scorch.bmp \
	data/textures/landscape/sand/shore.bmp \
	data/textures/landscape/sand/texture0.bmp \
	data/textures/landscape/sand/texture1.bmp \
	data/textures/landscape/sand/texture2.bmp \
	data/textures/landscape/sand/texture3.bmp \
	data/textures/landscape/sand/texture4.bmp
scorcheddatatextureslandscapesnowdir = ${datadir}/data/textures/landscape/snow
scorcheddatatextureslandscapesnow_DATA = data/textures/landscape/snow/cloud1.bmp \
	data/textures/landscape/snow/cubemap.bmp \
	data/textures/landscape/snow/rockside.bmp \
	data/textures/landscape/snow/scorch.bmp \
	data/textures/landscape/snow/shore.bmp \
	data/textures/landscape/snow/texture0.bmp \
	data/textures/landscape/snow/texture1.bmp \
	data/textures/landscape/snow/texture2.bmp \
	data/textures/landscape/snow/texture3.bmp \
	data/textures/landscape/snow/texture4.bmp
scorcheddatatextureslandscapestormdir = ${datadir}/data/textures/landscape/storm
scorcheddatatextureslandscapestorm_DATA = data/textures/landscape/storm/cloud1.bmp \
	data/textures/landscape/storm/cubemap.bmp \
	data/textures/landscape/storm/rockside.bmp \
	data/textures/landscape/storm/scorch.bmp \
	data/textures/landscape/storm/shore.bmp \
	data/textures/landscape/storm/texture0.bmp \
	data/textures/landscape/storm/texture1.bmp \
	data/textures/landscape/storm/texture2.bmp \
	data/textures/landscape/storm/texture3.bmp \
	data/textures/landscape/storm/texture4.bmp
scorcheddatatextureslandscapetropicaldir = ${datadir}/data/textures/landscape/tropical
scorcheddatatextureslandscapetropical_DATA = data/textures/landscape/tropical/cloud1.bmp \
	data/textures/landscape/tropical/cubemap.bmp \
	data/textures/landscape/tropical/rockside.bmp \
	data/textures/landscape/tropical/scorch.bmp \
	data/textures/landscape/tropical/shore.bmp \
	data/textures/landscape/tropical/texture0.bmp \
	data/textures/landscape/tropical/texture1.bmp \
	data/textures/landscape/tropical/texture2.bmp \
	data/textures/landscape/tropical/texture3.bmp \
	data/textures/landscape/tropical/texture4.bmp
scorcheddatatextureslandscapevulcanodir = ${datadir}/data/textures/landscape/vulcano
scorcheddatatextureslandscapevulcano_DATA = data/textures/landscape/vulcano/cloud1.bmp \
	data/textures/landscape/vulcano/cubemap.bmp \
	data/textures/landscape/vulcano/rockside.bmp \
	data/textures/landscape/vulcano/scorch.bmp \
	data/textures/landscape/vulcano/shore.bmp \
	data/textures/landscape/vulcano/texture0.bmp \
	data/textures/landscape/vulcano/texture1.bmp \
	data/textures/landscape/vulcano/texture2.bmp \
	data/textures/landscape/vulcano/texture3.bmp \
	data/textures/landscape/vulcano/texture4.bmp
scorcheddatatextureslensflaredir = ${datadir}/data/textures/lensflare
scorcheddatatextureslensflare_DATA = data/textures/lensflare/flare0.bw \
	data/textures/lensflare/flare1.bw \
	data/textures/lensflare/flare2.bw \
	data/textures/lensflare/flare3.bw \
	data/textures/lensflare/flare4.bw \
	data/textures/lensflare/flare5.bw \
	data/textures/lensflare/shine0.bw \
	data/textures/lensflare/shine1.bw \
	data/textures/lensflare/shine2.bw \
	data/textures/lensflare/shine3.bw \
	data/textures/lensflare/shine4.bw \
	data/textures/lensflare/shine5.bw \
	data/textures/lensflare/shine6.bw \
	data/textures/lensflare/shine7.bw \
	data/textures/lensflare/shine8.bw \
	data/textures/lensflare/shine9.bw
scorcheddatatextureswiconsdir = ${datadir}/data/textures/wicons
scorcheddatatextureswicons_DATA = data/textures/wicons/Thumbs.db \
	data/textures/wicons/autod.bmp \
	data/textures/wicons/battery.bmp \
	data/textures/wicons/bdigger.bmp \
	data/textures/wicons/bmissile.bmp \
	data/textures/wicons/bnuke.bmp \
	data/textures/wicons/broller.bmp \
	data/textures/wicons/bshog.bmp \
	data/textures/wicons/dball.bmp \
	data/textures/wicons/dclod.bmp \
	data/textures/wicons/dhead.bmp \
	data/textures/wicons/digger.bmp \
	data/textures/wicons/fbomb.bmp \
	data/textures/wicons/fshield.bmp \
	data/textures/wicons/fuel.bmp \
	data/textures/wicons/hdigger.bmp \
	data/textures/wicons/hnapalm.bmp \
	data/textures/wicons/hrbomb.bmp \
	data/textures/wicons/hroller.bmp \
	data/textures/wicons/hshield.bmp \
	data/textures/wicons/hshog.bmp \
	data/textures/wicons/lfrog.bmp \
	data/textures/wicons/mag.bmp \
	data/textures/wicons/mirv.bmp \
	data/textures/wicons/missile.bmp \
	data/textures/wicons/napalm.bmp \
	data/textures/wicons/nuke.bmp \
	data/textures/wicons/para.bmp \
	data/textures/wicons/rbomb.bmp \
	data/textures/wicons/roller.bmp \
	data/textures/wicons/shield.bmp \
	data/textures/wicons/shog.bmp \
	data/textures/wicons/smag.bmp \
	data/textures/wicons/stracer.bmp \
	data/textures/wicons/tdirt.bmp \
	data/textures/wicons/tracer.bmp
scorcheddatawavdir = ${datadir}/data/wav
scorcheddatawav_DATA = 
scorcheddatawavbatterydir = ${datadir}/data/wav/battery
scorcheddatawavbattery_DATA = data/wav/battery/battery.wav
scorcheddatawavexplosionsdir = ${datadir}/data/wav/explosions
scorcheddatawavexplosions_DATA = data/wav/explosions/crunch.wav \
	data/wav/explosions/gloop.wav \
	data/wav/explosions/large.wav \
	data/wav/explosions/medium.wav \
	data/wav/explosions/napalm.wav \
	data/wav/explosions/small.wav \
	data/wav/explosions/tank.wav \
	data/wav/explosions/xlarge.wav
scorcheddatawavmiscdir = ${datadir}/data/wav/misc
scorcheddatawavmisc_DATA = data/wav/misc/camera.wav \
	data/wav/misc/para.wav \
	data/wav/misc/play.wav \
	data/wav/misc/splash.wav \
	data/wav/misc/text.wav
scorcheddatawavmovementdir = ${datadir}/data/wav/movement
scorcheddatawavmovement_DATA = data/wav/movement/elevate.wav \
	data/wav/movement/movement.wav \
	data/wav/movement/turn.wav
scorcheddatawavshielddir = ${datadir}/data/wav/shield
scorcheddatawavshield_DATA = data/wav/shield/activate.wav \
	data/wav/shield/activateforce.wav \
	data/wav/shield/hit.wav \
	data/wav/shield/hit2.wav
scorcheddatawavshootdir = ${datadir}/data/wav/shoot
scorcheddatawavshoot_DATA = data/wav/shoot/flare.wav \
	data/wav/shoot/large.wav \
	data/wav/shoot/laser.wav \
	data/wav/shoot/launch.wav \
	data/wav/shoot/medium.wav \
	data/wav/shoot/small.wav \
	data/wav/shoot/tracer.wav \
	data/wav/shoot/xlarge.wav
scorcheddatawindowsdir = ${datadir}/data/windows
scorcheddatawindows_DATA = data/windows/pointera.bmp \
	data/windows/client.bmp \
	data/windows/display.bmp \
	data/windows/plan.bmp \
	data/windows/island.bmp \
	data/windows/island.ico \
	data/windows/logotiled.bmp \
	data/windows/move.bmp \
	data/windows/weapon.bmp \
	data/windows/scorched.bmp \
	data/windows/diff.bmp \
	data/windows/diffa.bmp \
	data/windows/server.bmp \
	data/windows/tank-easy.bmp \
	data/windows/tank-hard.bmp \
	data/windows/tank-med.bmp \
	data/windows/tank2.bmp \
	data/windows/tank2.ico \
	data/windows/wait.bmp \
	data/windows/waita.bmp \
	data/windows/wind.bmp \
	data/windows/winda.bmp \
	data/windows/arrow.bmp \
	data/windows/arrowi.bmp \
	data/windows/plana.bmp \
	data/windows/player.bmp \
	data/windows/playera.bmp \
	data/windows/playera2.bmp \
	data/windows/weapona.bmp \
	data/windows/weapona2.bmp \
	data/windows/winda2.bmp \
	data/windows/aim.bmp \
	data/windows/aima.bmp \
	data/windows/pointer.bmp
